# aetherapps

./: .gitignore  README.md
Notepad/: NotePad.py  main.py
PhotoViewer/: Readme.md  photo_viewer.py
Ping Pong/: Ping Pong.py
app_concept/: main.py
app_concept/c/: gtk.c  main.c
app_concept/cpp/: CMakeLists.txt  Makefile  main.cpp
app_concept/cs/Avalonia/: NurOSDark.csproj  Program.cs  build.sh
app_concept/cs/GTK#/: NurOSDark.csproj  Program.cs
astrum/: astrum.hpp  main.cpp  main.py  meson.build
astrum/data/: astrum.desktop
audioplayer/: audio_player.py
calc/: MANIFEST.in  README.md  setup.cfg  setup.py
calc/src/calculator/: __init__.py  main.py
four balls in a row/: four balls in a row.py
game/: juldyz.py
game/tic-tac-toe in different languages/: tic-tac-toe-python.py
games/juldyzgame/: juldyz.py
manger_wifi/: Wifi-Manager.py
math/: README.md  deltamath.py  main.cpp  meson.build
mediaplayer/: README.md  main.py  player.py  playlist.py  requirements.txt  sctucture  setup.py  styles.py
mediaplayer/src/: __init__.py  main.py
mediaplayer/src/ui/: __init__.py  player.py  player_controls.py  style.py
mediaplayer/src/utils/: __init__.py  audio.py
tic-tac-toe in different languages/: tic-tac-toe-lua.lua  tic-tac-toe-python.py  tic-tac-toe.c
tic-tac-toe in different languages/tic-tac-toe-html-js-css/: index.html
