[metadata]
name = nuros-calculator
version = 1.0.0
description = NurOS Calculator with Delta Design Concept Night theme
long_description = file: README.md
long_description_content_type = text/markdown
author = AnmiTaliDev
author_email = anmitali@anmitali.kz
url = https://github.com/nuros-linux/ddeapps
license = GPL-3.0
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    PyQt6>=6.4.0
    requests>=2.31.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nuros-calculator = calculator.main:main
gui_scripts =
    nuros-calculator-gui = calculator.main:main

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,build

[pylint]
max-line-length = 100
disable = C0111,R0903,C0103